Fixed smog buttons.

--- a/public/index.html
+++ b/public/index.html
@@ -159,113 +159,75 @@
                     <!-- Switches -->
                     <div class="col s3">
                         <div class="row">
-                            <div class="col s6">Dwutlenek Azotu
+                            <div class="col s6">
                                 <div class="switch">
                                     <label>
-                                        Off
+                                        Dwutlenek Azotu
                                         <input checked type="checkbox" id="dwutlenekAzotuSwitch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Tlenek Azotu
-                                <div class="switch" >
+                                    <br>
                                     <label>
-                                        Off
+                                        Tlenek Azotu
                                         <input type="checkbox" id="tlenekAzotuSwitch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Tlenki Azotu
-                                <div class="switch">
+                                    <br>
                                     <label>
-                                        Off
+                                        Tlenki Azotu
                                         <input type="checkbox" id="tlenkiAzotuSwitch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Pyl Zawieszony Pm10
-                                <div class="switch">
+                                    <br>
                                     <label>
-                                        Off
+                                        Pyl Zawieszony Pm 10
                                         <input type="checkbox" id="pylZawieszonyPm10Switch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Pyl Zawieszony Pm25
-                                <div class="switch">
+                                    <br>
                                     <label>
-                                        Off
+                                        Pyl Zawieszony Pm 2,5
                                         <input type="checkbox" id="pylZawieszonyPm25Switch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
                                 </div>
                             </div>
-                            <div class="col s6">Tlenek Wegla
+                            <div class="col s6">
                                 <div class="switch">
                                     <label>
-                                        Off
+                                        Tlenek Wegla
                                         <input type="checkbox" id="tlenekWeglaSwitch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Tlenek Wegla 8H
-                                <div class="switch">
+                                    <br>
                                     <label>
-                                        Off
+                                        Tlenek Wegla 8H
                                         <input type="checkbox" id="tlenekWegla8HSwitch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Ozon
-                                <div class="switch">
+                                    <br>
                                     <label>
-                                        Off
+                                        Ozon<br>
                                         <input type="checkbox" id="ozonSwitch">
                                         <span class="lever"></span>
-                                        On
+                                        <br>
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Ozon 8H
-                                <div class="switch">
                                     <label>
-                                        Off
+                                        Ozon 8H<br>
                                         <input type="checkbox" id="ozon8HSwitch">
                                         <span class="lever"></span>
-                                        On
+                                        <br>
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Benzen
-                                <div class="switch">
                                     <label>
-                                        Off
+                                        Benzen<br>
                                         <input type="checkbox" id="benzenSwitch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
-                                </div>
-                            </div>
-                            <div class="col s6">Dwutlenek Siarki
-                                <div class="switch">
+                                    <br>
                                     <label>
-                                        Off
+                                        Dwutlenek Siarki
                                         <input type="checkbox" id="dwutlenekSiarkiSwitch">
                                         <span class="lever"></span>
-                                        On
                                     </label>
                                 </div>
                             </div>
